--- a/home.html
+++ b/home.html
@@ -179,6 +179,37 @@
     ]
   },
   {
+    "title": "Cần cơ chế đặc biệt để doanh nghiệp Việt Nam làm chủ công nghệ đường sắt",
+    "content": "Thứ trưởng Xây dựng Nguyễn Danh Huy đã đề xuất cần có cơ chế đặc biệt để doanh nghiệp Việt Nam có thể làm chủ công nghệ đường sắt, thông qua việc đặt hàng, ưu đãi về vốn, đất đai và công nghệ. Trong cuộc họp của Ủy ban Thường vụ Quốc hội vào ngày 10/3, ông nhấn mạnh rằng việc phát triển công nghiệp đường sắt cần một nguồn vốn lớn và sự hỗ trợ từ Nhà nước. Dự kiến, Luật Đường sắt sửa đổi sẽ ưu tiên đầu tư cho các sản phẩm công nghiệp đường sắt công nghệ cao và yêu cầu chuyển giao công nghệ từ các nhà thầu nước ngoài.",
+    "link": "https://vnexpress.net/can-co-che-dac-biet-de-doanh-nghiep-viet-nam-lam-chu-cong-nghe-duong-sat-4859065.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Doanh nghiệp Việt Nam cần cơ chế gì để làm chủ công nghệ đường sắt?",
+    "answers": [
+      {
+        "text": "Cần cơ chế đặc biệt từ Nhà nước",
+        "correct": true
+      },
+      {
+        "text": "Cần tăng cường nguồn vốn từ nước ngoài",
+        "correct": false
+      },
+      {
+        "text": "Cần giảm thuế cho doanh nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Cần hợp tác quốc tế nhiều hơn",
+        "correct": false
+      },
+      {
+        "text": "Cần tuyển dụng chuyên gia nước ngoài",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tân binh Phạm Lý Đức: 'Tôi cần khiêm tốn khi lên tuyển Việt Nam'",
     "content": "Phạm Lý Đức, trung vệ 22 tuổi của HAGL, vừa được triệu tập lần đầu lên đội tuyển quốc gia Việt Nam. Anh bày tỏ sự vui mừng và nhấn mạnh tầm quan trọng của việc khiêm tốn học hỏi từ các đàn anh để tích lũy kinh nghiệm. Lý Đức đã có màn trình diễn tốt tại V-League với 2 bàn thắng và 1 kiến tạo, góp phần giúp đội bóng của mình có những thành tích khả quan. Chuyên gia Đoàn Minh Xương nhận định anh là một nhân tố trẻ đầy triển vọng cho bóng đá Việt Nam trong tương lai.",
     "link": "https://vnexpress.net/tan-binh-pham-ly-duc-toi-can-khiem-ton-khi-len-tuyen-viet-nam-4858817.html",
@@ -384,33 +415,6 @@
     ]
   },
   {
-    "title": "Tê tay có phải dấu hiệu đột quỵ?",
-    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
-    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
-    "answers": [
-      {
-        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
-        "correct": true
-      },
-      {
-        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng chục chiếc VF 3 dạo phố trước cuộc thi của VinFast",
     "content": "Vào ngày Quốc tế phụ nữ 8/3, một nhóm hơn 40 nữ chủ xe VF 3 đã tổ chức một cuộc diễu hành qua các tuyến phố Hà Nội để quảng bá cho cuộc thi \"Sáng tạo chất riêng, Độc bản cá tính\" do VinFast tổ chức. Những chiếc xe VF 3 được cá nhân hóa với nhiều màu sắc và phong cách khác nhau đã thu hút sự chú ý của đông đảo người dân. Sự kiện này không chỉ là dịp để các chị em giao lưu mà còn lan tỏa cảm hứng sáng tạo trong cộng đồng. Cuộc thi sẽ diễn ra vào ngày 22/3 tại nhiều thành phố lớn, với tổng giá trị giải thưởng lên tới 650 triệu đồng.",
     "link": "https://vnexpress.net/hang-chuc-chiec-vf-3-dao-pho-truoc-cuoc-thi-cua-vinfast-4859032.html",
@@ -437,6 +441,33 @@
       },
       {
         "text": "1/3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tê tay có phải dấu hiệu đột quỵ?",
+    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
+    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
+    "answers": [
+      {
+        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
+        "correct": true
+      },
+      {
+        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
         "correct": false
       }
     ]
@@ -1277,33 +1308,6 @@
     ]
   },
   {
-    "title": "Ung thư tuyến giáp có tái phát không?",
-    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
-    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ung thư tuyến giáp có tái phát không?",
-    "answers": [
-      {
-        "text": "Có, ung thư tuyến giáp có thể tái phát.",
-        "correct": true
-      },
-      {
-        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát ở người lớn tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thầy hiệu trưởng lập ra \"bức tường góp ý\" để lắng nghe học sinh",
     "content": "Trường Trung học Shiping tại tỉnh Vân Nam, Trung Quốc, đã thiết lập một \"bức tường góp ý\" để học sinh có thể bày tỏ ý kiến và đóng góp của mình. Thầy hiệu trưởng Zhang Min hy vọng sáng kiến này sẽ tạo ra một kênh giao tiếp hiệu quả giữa học sinh và ban giám hiệu, từ đó cải thiện môi trường giáo dục. Học sinh có thể đề xuất ý kiến trực tiếp, và thầy Zhang cam kết sẽ xem xét và giải quyết những vấn đề hợp lý mà các em nêu ra.",
     "link": "https://dantri.com.vn/giao-duc/thay-hieu-truong-lap-ra-buc-tuong-gop-y-de-lang-nghe-hoc-sinh-20250309152542216.htm",
@@ -1330,6 +1334,33 @@
       },
       {
         "text": "Một chương trình học mới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ung thư tuyến giáp có tái phát không?",
+    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
+    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ung thư tuyến giáp có tái phát không?",
+    "answers": [
+      {
+        "text": "Có, ung thư tuyến giáp có thể tái phát.",
+        "correct": true
+      },
+      {
+        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát ở người lớn tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
         "correct": false
       }
     ]
@@ -1822,33 +1853,6 @@
     ]
   },
   {
-    "title": "Uống sữa có làm tăng cholesterol?",
-    "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
-    "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Uống sữa có làm tăng cholesterol không?",
-    "answers": [
-      {
-        "text": "Có, nếu chọn loại không phù hợp.",
-        "correct": true
-      },
-      {
-        "text": "Không, sữa không ảnh hưởng đến cholesterol.",
-        "correct": false
-      },
-      {
-        "text": "Có, tất cả các loại sữa đều làm tăng cholesterol.",
-        "correct": false
-      },
-      {
-        "text": "Không, sữa chỉ tốt cho sức khỏe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Biến chứng tiểu đường gây mờ mắt",
     "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
     "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
@@ -1871,6 +1875,33 @@
       },
       {
         "text": "Bệnh glôcôm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Uống sữa có làm tăng cholesterol?",
+    "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
+    "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Uống sữa có làm tăng cholesterol không?",
+    "answers": [
+      {
+        "text": "Có, nếu chọn loại không phù hợp.",
+        "correct": true
+      },
+      {
+        "text": "Không, sữa không ảnh hưởng đến cholesterol.",
+        "correct": false
+      },
+      {
+        "text": "Có, tất cả các loại sữa đều làm tăng cholesterol.",
+        "correct": false
+      },
+      {
+        "text": "Không, sữa chỉ tốt cho sức khỏe.",
         "correct": false
       }
     ]
@@ -2938,6 +2969,33 @@
     ]
   },
   {
+    "title": "Bé gái nguy kịch do biến chứng sởi",
+    "content": "Một bé gái một tuổi ở Phú Thọ đã nhập viện trong tình trạng nguy kịch do biến chứng sởi, với triệu chứng sốt cao liên tục, co giật, và phát ban toàn thân. Sau 6 ngày điều trị tích cực, tình trạng của bé đã ổn định, hết sốt và có thể ăn uống trở lại. Bệnh sởi là một bệnh truyền nhiễm nguy hiểm, có thể gây ra nhiều biến chứng nghiêm trọng, vì vậy việc tiêm vaccine và giữ vệ sinh là rất cần thiết để phòng ngừa bệnh.",
+    "link": "https://vnexpress.net/be-gai-nguy-kich-do-bien-chung-soi-4858787.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé gái nguy kịch do biến chứng nào?",
+    "answers": [
+      {
+        "text": "Sởi",
+        "correct": true
+      },
+      {
+        "text": "Cúm",
+        "correct": false
+      },
+      {
+        "text": "Thủy đậu",
+        "correct": false
+      },
+      {
+        "text": "Viêm phổi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng nghìn ôtô điện VinFast sắp đến Indonesia",
     "content": "VinFast đã xuất khẩu gần 2.500 chiếc ôtô điện đến Indonesia, bao gồm các mẫu VF 3, VF 5, VF e34 và Nerio Green, trên tàu Silver Queen. Lô hàng này sẽ được bàn giao cho người tiêu dùng trước lễ Lebaran của người Hồi giáo. VinFast đánh giá Indonesia là thị trường trọng điểm với tốc độ tăng trưởng cao và đã có kế hoạch mở rộng sản xuất, nhằm cung cấp các dịch vụ và sản phẩm tốt nhất cho khách hàng tại đây.",
     "link": "https://vnexpress.net/hang-nghin-oto-dien-vinfast-sap-den-indonesia-4858752.html",
@@ -2964,33 +3022,6 @@
       },
       {
         "text": "Singapore",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bé gái nguy kịch do biến chứng sởi",
-    "content": "Một bé gái một tuổi ở Phú Thọ đã nhập viện trong tình trạng nguy kịch do biến chứng sởi, với triệu chứng sốt cao liên tục, co giật, và phát ban toàn thân. Sau 6 ngày điều trị tích cực, tình trạng của bé đã ổn định, hết sốt và có thể ăn uống trở lại. Bệnh sởi là một bệnh truyền nhiễm nguy hiểm, có thể gây ra nhiều biến chứng nghiêm trọng, vì vậy việc tiêm vaccine và giữ vệ sinh là rất cần thiết để phòng ngừa bệnh.",
-    "link": "https://vnexpress.net/be-gai-nguy-kich-do-bien-chung-soi-4858787.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé gái nguy kịch do biến chứng nào?",
-    "answers": [
-      {
-        "text": "Sởi",
-        "correct": true
-      },
-      {
-        "text": "Cúm",
-        "correct": false
-      },
-      {
-        "text": "Thủy đậu",
-        "correct": false
-      },
-      {
-        "text": "Viêm phổi",
         "correct": false
       }
     ]
@@ -3795,37 +3826,6 @@
       },
       {
         "text": "20ha với 3.000 căn nhà",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ấn Độ bỏ lệnh cấm xuất khẩu gạo 100% tấm, giá gạo Việt Nam trước nguy cơ lao dốc",
-    "content": "Ấn Độ đã gỡ bỏ lệnh cấm xuất khẩu gạo 100% tấm, điều này dự báo sẽ khiến giá gạo của các nước khác, bao gồm cả Việt Nam, giảm sâu. Các nhà xuất khẩu gạo Ấn Độ hy vọng rằng quyết định này sẽ thúc đẩy kinh doanh và tăng thu nhập cho nông dân. Hiện tại, giá gạo 100% tấm của Ấn Độ chào bán ở mức 330 USD/tấn, cao hơn so với gạo Việt Nam. Tuy nhiên, sự trở lại của gạo Ấn Độ sẽ tạo áp lực lên giá gạo toàn cầu, nhất là khi nhu cầu từ một số thị trường đã giảm.",
-    "link": "https://tuoitre.vn/an-do-bo-lenh-cam-xuat-khau-gao-100-tam-gia-gao-viet-nam-truoc-nguy-co-lao-doc-20250309124902628.htm",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Giá gạo Việt Nam sẽ bị ảnh hưởng như thế nào khi Ấn Độ gỡ bỏ lệnh cấm xuất khẩu?",
-    "answers": [
-      {
-        "text": "Giá gạo Việt Nam có thể giảm sâu.",
-        "correct": true
-      },
-      {
-        "text": "Giá gạo Việt Nam sẽ tăng cao.",
-        "correct": false
-      },
-      {
-        "text": "Giá gạo Việt Nam không thay đổi.",
-        "correct": false
-      },
-      {
-        "text": "Giá gạo Việt Nam sẽ giữ nguyên.",
-        "correct": false
-      },
-      {
-        "text": "Giá gạo Việt Nam sẽ tăng lên 500 USD/tấn.",
         "correct": false
       }
     ]
