--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Những bệnh trẻ thường mắc khi trời nồm",
+    "content": "Trẻ nhỏ thường mắc các bệnh như tiêu chảy cấp, viêm phổi, hen phế quản khi thời tiết nồm ẩm, do độ ẩm cao tạo điều kiện cho virus và vi khuẩn phát triển. Theo bác sĩ Nguyễn Thị Hương, môi trường ẩm ướt làm gia tăng nguy cơ nhiễm trùng hô hấp và các bệnh truyền nhiễm. Để phòng ngừa, phụ huynh nên chú ý đến chế độ dinh dưỡng và vệ sinh cho trẻ, giữ nhà cửa thông thoáng, khô ráo.",
+    "link": "https://vnexpress.net/nhung-benh-tre-thuong-mac-khi-troi-nom-4859071.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Trẻ em thường mắc bệnh gì khi trời nồm ẩm?",
+    "answers": [
+      {
+        "text": "Tiêu chảy cấp",
+        "correct": true
+      },
+      {
+        "text": "Đau bụng",
+        "correct": false
+      },
+      {
+        "text": "Cảm lạnh",
+        "correct": false
+      },
+      {
+        "text": "Viêm dạ dày",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tiểu đường",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "10 điểm nhấn vòng 28 Ngoại hạng Anh",
     "content": "Vòng 28 Ngoại hạng Anh có nhiều điểm nhấn đáng chú ý. Bruno Fernandes ghi bàn từ đá phạt, giúp Man Utd vượt qua Arsenal, trong khi Liverpool tiếp tục đua tranh với cú ăn ba sau chiến thắng trước Southampton. Man City rơi xuống thứ năm sau thất bại trước Nottingham, và Leicester tiếp tục chìm sâu dưới đáy bảng với sự dẫn dắt của Van Nistelrooy. Brighton có sự trở lại mạnh mẽ khi giành chiến thắng liên tiếp, trong khi Aston Villa chấm dứt chuỗi hòa và thua sau mỗi trận Champions League.",
     "link": "https://vnexpress.net/10-diem-nhan-vong-28-ngoai-hang-anh-4859052.html",
@@ -738,6 +769,33 @@
     ]
   },
   {
+    "title": "Tê tay có phải dấu hiệu đột quỵ?",
+    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
+    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
+    "answers": [
+      {
+        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
+        "correct": true
+      },
+      {
+        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng chục chiếc VF 3 dạo phố trước cuộc thi của VinFast",
     "content": "Vào ngày Quốc tế phụ nữ 8/3, một nhóm hơn 40 nữ chủ xe VF 3 đã tổ chức một cuộc diễu hành qua các tuyến phố Hà Nội để quảng bá cho cuộc thi \"Sáng tạo chất riêng, Độc bản cá tính\" do VinFast tổ chức. Những chiếc xe VF 3 được cá nhân hóa với nhiều màu sắc và phong cách khác nhau đã thu hút sự chú ý của đông đảo người dân. Sự kiện này không chỉ là dịp để các chị em giao lưu mà còn lan tỏa cảm hứng sáng tạo trong cộng đồng. Cuộc thi sẽ diễn ra vào ngày 22/3 tại nhiều thành phố lớn, với tổng giá trị giải thưởng lên tới 650 triệu đồng.",
     "link": "https://vnexpress.net/hang-chuc-chiec-vf-3-dao-pho-truoc-cuoc-thi-cua-vinfast-4859032.html",
@@ -764,33 +822,6 @@
       },
       {
         "text": "1/3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tê tay có phải dấu hiệu đột quỵ?",
-    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
-    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
-    "answers": [
-      {
-        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
-        "correct": true
-      },
-      {
-        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
         "correct": false
       }
     ]
@@ -1426,37 +1457,6 @@
     ]
   },
   {
-    "title": "BMW tung ưu đãi mới cho sedan 3 series",
-    "content": "BMW vừa công bố chương trình ưu đãi cho mẫu sedan 3 series, trong đó khách hàng mua xe trả góp sẽ nhận lãi suất 0% trong 12 tháng đầu với khoản vay lên đến 70% giá trị xe. Chương trình này được áp dụng từ tháng 3 năm 2025, nhằm khuyến khích tiêu thụ trong bối cảnh thị trường ôtô đang phục hồi. Ngoài ra, khách hàng còn được hưởng dịch vụ hậu mãi hấp dẫn như bảo hành 5 năm không giới hạn km và cơ hội tham gia bốc thăm chuyến du lịch châu Âu.",
-    "link": "https://vnexpress.net/bmw-tung-uu-dai-moi-cho-sedan-3-series-4858930.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chương trình ưu đãi nào mà BMW dành cho sedan 3 series?",
-    "answers": [
-      {
-        "text": "Hỗ trợ lãi suất 0% trong 12 tháng",
-        "correct": true
-      },
-      {
-        "text": "Giảm giá trực tiếp cho xe",
-        "correct": false
-      },
-      {
-        "text": "Tặng kèm phụ kiện xe",
-        "correct": false
-      },
-      {
-        "text": "Miễn phí bảo dưỡng trọn đời",
-        "correct": false
-      },
-      {
-        "text": "Tặng vé xem phim cho khách hàng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bé chậm tăng cân do lỗ thông liên nhĩ",
     "content": "Minh Anh, 2 tuổi, bị thông liên nhĩ lớn dẫn đến chậm tăng cân và thường xuyên viêm đường hô hấp. Sau khi theo dõi và điều trị dinh dưỡng, bé đã đủ điều kiện để can thiệp đóng lỗ thông. Bác sĩ thực hiện thủ thuật xâm lấn tối thiểu để bít lỗ thông liên nhĩ mà không gây tổn thương. Sau can thiệp, sức khỏe của Minh Anh cải thiện rõ rệt, không còn viêm hô hấp và tăng cân tốt hơn.",
     "link": "https://vnexpress.net/be-cham-tang-can-do-lo-thong-lien-nhi-4858895.html",
@@ -1483,6 +1483,37 @@
       },
       {
         "text": "Viêm phổi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "BMW tung ưu đãi mới cho sedan 3 series",
+    "content": "BMW vừa công bố chương trình ưu đãi cho mẫu sedan 3 series, trong đó khách hàng mua xe trả góp sẽ nhận lãi suất 0% trong 12 tháng đầu với khoản vay lên đến 70% giá trị xe. Chương trình này được áp dụng từ tháng 3 năm 2025, nhằm khuyến khích tiêu thụ trong bối cảnh thị trường ôtô đang phục hồi. Ngoài ra, khách hàng còn được hưởng dịch vụ hậu mãi hấp dẫn như bảo hành 5 năm không giới hạn km và cơ hội tham gia bốc thăm chuyến du lịch châu Âu.",
+    "link": "https://vnexpress.net/bmw-tung-uu-dai-moi-cho-sedan-3-series-4858930.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chương trình ưu đãi nào mà BMW dành cho sedan 3 series?",
+    "answers": [
+      {
+        "text": "Hỗ trợ lãi suất 0% trong 12 tháng",
+        "correct": true
+      },
+      {
+        "text": "Giảm giá trực tiếp cho xe",
+        "correct": false
+      },
+      {
+        "text": "Tặng kèm phụ kiện xe",
+        "correct": false
+      },
+      {
+        "text": "Miễn phí bảo dưỡng trọn đời",
+        "correct": false
+      },
+      {
+        "text": "Tặng vé xem phim cho khách hàng",
         "correct": false
       }
     ]
@@ -2149,6 +2180,33 @@
     ]
   },
   {
+    "title": "Uống sữa có làm tăng cholesterol?",
+    "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
+    "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Uống sữa có làm tăng cholesterol không?",
+    "answers": [
+      {
+        "text": "Có, nếu chọn loại không phù hợp.",
+        "correct": true
+      },
+      {
+        "text": "Không, sữa không ảnh hưởng đến cholesterol.",
+        "correct": false
+      },
+      {
+        "text": "Có, tất cả các loại sữa đều làm tăng cholesterol.",
+        "correct": false
+      },
+      {
+        "text": "Không, sữa chỉ tốt cho sức khỏe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
     "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
     "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
@@ -2198,33 +2256,6 @@
       },
       {
         "text": "Bệnh glôcôm",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Uống sữa có làm tăng cholesterol?",
-    "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
-    "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Uống sữa có làm tăng cholesterol không?",
-    "answers": [
-      {
-        "text": "Có, nếu chọn loại không phù hợp.",
-        "correct": true
-      },
-      {
-        "text": "Không, sữa không ảnh hưởng đến cholesterol.",
-        "correct": false
-      },
-      {
-        "text": "Có, tất cả các loại sữa đều làm tăng cholesterol.",
-        "correct": false
-      },
-      {
-        "text": "Không, sữa chỉ tốt cho sức khỏe.",
         "correct": false
       }
     ]
@@ -2450,37 +2481,6 @@
     ]
   },
   {
-    "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
-    "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
-    "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Hà Thảo Trang đã làm gì để giành học bổng du học Mỹ?",
-    "answers": [
-      {
-        "text": "Cô đã dành ba tháng để viết hồ sơ và bài luận.",
-        "correct": true
-      },
-      {
-        "text": "Cô đã tham gia nhiều hoạt động ngoại khóa.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã học tiếng Anh từ nhỏ.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã thi nhiều cuộc thi tranh biện.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lexus LX 700h bản giới hạn 10 xe ra mắt",
     "content": "Lexus vừa ra mắt phiên bản giới hạn LX 700h Hideki Edition kỷ niệm 10 năm chiến thắng của tay golf Hideki Matsuyama. Phiên bản này chỉ sản xuất 10 chiếc, được sơn màu Manganese Luster và trang bị những tính năng cao cấp như hệ thống âm thanh Mark Levinson. Giá bán của phiên bản đặc biệt này tại Nhật Bản là 114.900 USD, cao hơn 7.400 USD so với phiên bản tiêu chuẩn.",
     "link": "https://vnexpress.net/lexus-lx-700h-ban-gioi-han-10-xe-ra-mat-4858775.html",
@@ -2507,6 +2507,37 @@
       },
       {
         "text": "12 xe",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
+    "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
+    "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Hà Thảo Trang đã làm gì để giành học bổng du học Mỹ?",
+    "answers": [
+      {
+        "text": "Cô đã dành ba tháng để viết hồ sơ và bài luận.",
+        "correct": true
+      },
+      {
+        "text": "Cô đã tham gia nhiều hoạt động ngoại khóa.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã học tiếng Anh từ nhỏ.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã thi nhiều cuộc thi tranh biện.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
         "correct": false
       }
     ]
@@ -2732,33 +2763,6 @@
     ]
   },
   {
-    "title": "Toyota - 'trùm' xe hybrid tại Việt Nam",
-    "content": "Toyota đã dẫn đầu thị trường xe hybrid tại Việt Nam trong năm 2024 với doanh số đạt hơn 5.300 chiếc, chiếm khoảng 54% thị phần. Hãng đã có mặt tại Việt Nam gần 30 năm và đóng vai trò quan trọng trong việc phát triển xe hybrid. Mặc dù xe thuần điện đang được khuyến khích, Toyota vẫn tiếp tục đầu tư vào công nghệ hybrid, với kế hoạch mở rộng sản phẩm trong tương lai để đáp ứng nhu cầu thị trường.",
-    "link": "https://vnexpress.net/toyota-trum-xe-hybrid-tai-viet-nam-4858275.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao Toyota được coi là 'trùm' xe hybrid tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Vì họ chiếm 54% thị phần xe hybrid tại Việt Nam.",
-        "correct": true
-      },
-      {
-        "text": "Họ sản xuất xe điện thuần.",
-        "correct": false
-      },
-      {
-        "text": "Họ có nhiều mẫu xe thể thao.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ bán xe chạy bằng xăng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Genesis GV70 mới giá từ 48.000 USD",
     "content": "Genesis GV70 2025 đã được giới thiệu tại thị trường Mỹ với giá khởi điểm từ 48.000 USD. Mẫu SUV này có thiết kế ngoại thất được nâng cấp với lưới tản nhiệt táo bạo hơn và màn hình OLED 27 inch mới bên trong. Xe có hai tùy chọn động cơ: máy xăng 2.5 tăng áp 300 mã lực và động cơ V6 3.5 tăng áp 375 mã lực. Các tính năng an toàn và hỗ trợ lái cũng được cải tiến với nhiều công nghệ hiện đại.",
     "link": "https://vnexpress.net/genesis-gv70-moi-gia-tu-48-000-usd-4858748.html",
@@ -2785,6 +2789,33 @@
       },
       {
         "text": "60.000 USD",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Toyota - 'trùm' xe hybrid tại Việt Nam",
+    "content": "Toyota đã dẫn đầu thị trường xe hybrid tại Việt Nam trong năm 2024 với doanh số đạt hơn 5.300 chiếc, chiếm khoảng 54% thị phần. Hãng đã có mặt tại Việt Nam gần 30 năm và đóng vai trò quan trọng trong việc phát triển xe hybrid. Mặc dù xe thuần điện đang được khuyến khích, Toyota vẫn tiếp tục đầu tư vào công nghệ hybrid, với kế hoạch mở rộng sản phẩm trong tương lai để đáp ứng nhu cầu thị trường.",
+    "link": "https://vnexpress.net/toyota-trum-xe-hybrid-tai-viet-nam-4858275.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao Toyota được coi là 'trùm' xe hybrid tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Vì họ chiếm 54% thị phần xe hybrid tại Việt Nam.",
+        "correct": true
+      },
+      {
+        "text": "Họ sản xuất xe điện thuần.",
+        "correct": false
+      },
+      {
+        "text": "Họ có nhiều mẫu xe thể thao.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ bán xe chạy bằng xăng.",
         "correct": false
       }
     ]
@@ -4118,37 +4149,6 @@
       },
       {
         "text": "Giáo dục",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bình Dương thêm hàng ngàn căn nhà ở xã hội liền kề khu công nghiệp",
-    "content": "Bình Dương vừa khởi công dự án nhà ở xã hội Hòa Phú với quy mô hơn 26ha và gần 3.300 căn nhà. Dự án được xây dựng liền kề các khu công nghiệp lớn, nhằm đáp ứng nhu cầu an cư cho công nhân và người lao động. Những căn nhà trong dự án không chỉ là chung cư mà còn có mô hình nhà phố liên kế, kèm theo nhiều tiện ích đồng bộ. Tỉnh Bình Dương dự kiến sẽ hoàn thành thêm gần 85.000 căn nhà ở xã hội đến năm 2030.",
-    "link": "https://tuoitre.vn/binh-duong-them-hang-ngan-can-nha-o-xa-hoi-lien-ke-khu-cong-nghiep-20250309130828793.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Dự án nhà ở xã hội Hòa Phú ở Bình Dương có quy mô ra sao?",
-    "answers": [
-      {
-        "text": "Hơn 26ha với gần 3.300 căn nhà",
-        "correct": true
-      },
-      {
-        "text": "10ha với 1.000 căn nhà",
-        "correct": false
-      },
-      {
-        "text": "30ha với 5.000 căn nhà",
-        "correct": false
-      },
-      {
-        "text": "15ha với 2.500 căn nhà",
-        "correct": false
-      },
-      {
-        "text": "20ha với 3.000 căn nhà",
         "correct": false
       }
     ]
